Update ListeJeuxController.java